# moto-ssm-test

./: README.md  pyproject.toml
src/: app.py
tests/: conftest.py
tests/src/: test_app.py
