[tool.poetry]
name = "moto-ssm-test"
version = "0.1.0"
description = ""
authors = ["Thomas Roche <thomas.a.roche@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.85"
pyaml = "^21.10.1"
loguru = "^0.6.0"
openapi-spec-validator = "^0.5.1"
docker = "^6.0.0"

[tool.poetry.dev-dependencies]
moto = "^4.0.6"
flake8 = "^5.0.4"
pytest = "^7.1.3"
autopep8 = "^1.7.0"
pytest-mock = "^3.9.0"
pytest-clarity = "^1.0.1"
sure = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pytest.ini
[pytest]
minversion = 6.0
addopts = "-x -vvv -s -o log_cli=true --log-cli-level=10"
testpaths = "tests"
